Prevent components moving out of bounds, add selection box drawing to grid

--- a/src/routes/home/Home.css
+++ b/src/routes/home/Home.css
@@ -11,6 +11,7 @@
 
 .root {
   display: flex;
+  height: 100vh;
 }
 
 .root > * {
